common/tests/badSyntax/nestedUnclosedComments.output
nestedUnclosedComments.tyco:10.13: 
Unclosed comment at end of file
nestedUnclosedComments.tyco:10.13: 
Syntax error at end of file
2 errors
